batch-mode/ai-json-template-derive/tests/trybuild_justification/fail_unnamed_struct_hashmap.stderr
error: AiJsonTemplate derive only supports named fields for structs. Tuple/unnamed not supported here.
  --> tests/trybuild_justification/fail_unnamed_struct_hashmap.rs:15:1
   |
15 | / /// A tuple struct => should fail
16 | | #[derive(
17 | |     SaveLoad,
18 | |     Debug,
...  |
24 | | )]
25 | | struct TupleStructMap(HashMap<String, bool>);
   | |_____________________________________________^

error: AiJsonTemplateWithJustification only supports named structs
  --> tests/trybuild_justification/fail_unnamed_struct_hashmap.rs:15:1
   |
15 | / /// A tuple struct => should fail
16 | | #[derive(
17 | |     SaveLoad,
18 | |     Debug,
...  |
24 | | )]
25 | | struct TupleStructMap(HashMap<String, bool>);
   | |_____________________________________________^
